karnc/tests/fixtures/negative/148_adapter_consumes_cycle/src/alpha.karn
adapter alpha {
  binding "./alpha.binding.ts"
  consumes beta { B }

  exports capability { A }

  capability A {
    fn a() -> Effect[Int]
  }

  provides A = AImpl given B
}
